src/test/ui/consts/inline_asm.stderr
error[E0019]: constant contains unimplemented expression type
  --> $DIR/inline_asm.rs:3:24
   |
LL | const _: () = unsafe { llvm_asm!("nop") };
   |                        ^^^^^^^^^^^^^^^^
   |
   = note: this error originates in a macro (in Nightly builds, run with -Z macro-backtrace for more info)

error: aborting due to previous error

For more information about this error, try `rustc --explain E0019`.
